--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarSchoolClassesPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarSchoolClassesPanel.cshtml
@@ -11,8 +11,7 @@
     @* <span class="material-symbols-outlined">settings</span> *@
     <a class="nav-link dropdown-toggle" @(currentController is "SchoolClassCourses" or "SchoolClasses" or "SchoolClassStudents" ? "active" : "")
        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="material-symbols-outlined">admin_panel_settings</i>
-        SchoolClasses
+        <i class="material-symbols-outlined">admin_panel_settings</i>SchoolClasses
     </a>
 
     <ul class="dropdown-menu">
@@ -22,6 +21,7 @@
                 <i class="fas fa-person-through-window"></i> SchoolClasses
             </a>
         </li>
+
         <li>
             <hr class="dropdown-divider">
         </li>
@@ -31,6 +31,7 @@
                 <i class="fas fa-person-through-window"></i> SchoolClassCourses
             </a>
         </li>
+
         <li>
             <hr class="dropdown-divider">
         </li>
@@ -40,6 +41,7 @@
                 <i class="fas fa-person-through-window"></i> SchoolClassStudents
             </a>
         </li>
+
     </ul>
 
 </div>
