--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarTeachersPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarTeachersPanel.cshtml
@@ -11,8 +11,7 @@
     @* <span class="material-symbols-outlined">settings</span> *@
     <a class="nav-link dropdown-toggle @(currentController is "TeacherCourses" or "Teachers" ? "active" : "")"
        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="material-symbols-outlined">admin_panel_settings</i>
-        Teachers
+        <i class="material-symbols-outlined">admin_panel_settings</i>Teachers
     </a>
 
     <ul class="dropdown-menu">
@@ -22,6 +21,7 @@
                 <i class="fas fa-person-through-window"></i> Teachers
             </a>
         </li>
+
         <li>
             <hr class="dropdown-divider">
         </li>
@@ -31,6 +31,7 @@
                 <i class="fas fa-person-through-window"></i> TeacherCourses
             </a>
         </li>
+
     </ul>
 
 </div>
