--- a/SchoolProject.Web/Views/Teachers/Create.cshtml
+++ b/SchoolProject.Web/Views/Teachers/Create.cshtml
@@ -44,7 +44,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Active"/> @Html.DisplayNameFor(model => model.Active)
+                    <input class="form-check-input" asp-for="Active"/>
+                    @Html.DisplayNameFor(model => model.Active)
                 </label>
             </div>
             <div class="form-group">
@@ -84,7 +85,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted"/> @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted"/>
+                    @Html.DisplayNameFor(model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
