--- a/SchoolProject.Web/Views/Users/Edit.cshtml
+++ b/SchoolProject.Web/Views/Users/Edit.cshtml
@@ -29,7 +29,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted"/> @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted"/>
+                    @Html.DisplayNameFor(model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
@@ -60,7 +61,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EmailConfirmed"/> @Html.DisplayNameFor(model => model.EmailConfirmed)
+                    <input class="form-check-input" asp-for="EmailConfirmed"/>
+                    @Html.DisplayNameFor(model => model.EmailConfirmed)
                 </label>
             </div>
             <div class="form-group">
@@ -85,12 +87,14 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="PhoneNumberConfirmed"/> @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+                    <input class="form-check-input" asp-for="PhoneNumberConfirmed"/>
+                    @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="TwoFactorEnabled"/> @Html.DisplayNameFor(model => model.TwoFactorEnabled)
+                    <input class="form-check-input" asp-for="TwoFactorEnabled"/>
+                    @Html.DisplayNameFor(model => model.TwoFactorEnabled)
                 </label>
             </div>
             <div class="form-group">
@@ -100,7 +104,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="LockoutEnabled"/> @Html.DisplayNameFor(model => model.LockoutEnabled)
+                    <input class="form-check-input" asp-for="LockoutEnabled"/>
+                    @Html.DisplayNameFor(model => model.LockoutEnabled)
                 </label>
             </div>
             <div class="form-group">
