--- a/SchoolProject.Web/Views/TeacherCourses/Create.cshtml
+++ b/SchoolProject.Web/Views/TeacherCourses/Create.cshtml
@@ -35,7 +35,8 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="WasDeleted"/> @Html.DisplayNameFor(model => model.WasDeleted)
+                    <input class="form-check-input" asp-for="WasDeleted"/>
+                    @Html.DisplayNameFor(model => model.WasDeleted)
                 </label>
             </div>
             <div class="form-group">
