--- a/SchoolProject.Web/Views/TeacherCourses/Index.cshtml
+++ b/SchoolProject.Web/Views/TeacherCourses/Index.cshtml
@@ -9,70 +9,38 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
+
     <thead>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Teacher)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdGuid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WasDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.Teacher)</th>
+        <th>@Html.DisplayNameFor(model => model.Course)</th>
+        <th>@Html.DisplayNameFor(model => model.Id)</th>
+        <th>@Html.DisplayNameFor(model => model.IdGuid)</th>
+        <th>@Html.DisplayNameFor(model => model.WasDeleted)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedAt)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedBy)</th>
+        <th>@Html.DisplayNameFor(model => model.UpdatedAt)</th>
+        <th>@Html.DisplayNameFor(model => model.UpdatedBy)</th>
         <th></th>
     </tr>
     </thead>
+
     <tbody>
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Teacher.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdGuid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WasDeleted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedBy.Id)
-            </td>
+            <td>@Html.DisplayFor(modelItem => item.Teacher.Address)</td>
+            <td>@Html.DisplayFor(modelItem => item.Course.Code)</td>
+            <td>@Html.DisplayFor(modelItem => item.Id)</td>
+            <td>@Html.DisplayFor(modelItem => item.IdGuid)</td>
+            <td>@Html.DisplayFor(modelItem => item.WasDeleted)</td>
+            <td>@Html.DisplayFor(modelItem => item.CreatedAt)</td>
+            <td>@Html.DisplayFor(modelItem => item.CreatedBy.Id)</td>
+            <td>@Html.DisplayFor(modelItem => item.UpdatedAt)</td>
+            <td>@Html.DisplayFor(modelItem => item.UpdatedBy.Id)</td>
+
             <td>
                 @Html.ActionLink("Edit", "Edit", new {/* id=item.PrimaryKey */}) |
                 @Html.ActionLink("Details", "Details", new {/* id=item.PrimaryKey */}) |
