--- a/SchoolProject.Web/Views/Teachers/Index.cshtml
+++ b/SchoolProject.Web/Views/Teachers/Index.cshtml
@@ -9,124 +9,55 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
+
     <thead>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PostalCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MobilePhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Active)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdentificationNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdentificationType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ExpirationDateIdentificationNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TaxIdentificationNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EnrollDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProfilePhotoId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdGuid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WasDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+        <th>@Html.DisplayNameFor(model => model.LastName)</th>
+        <th>@Html.DisplayNameFor(model => model.Address)</th>
+        <th>@Html.DisplayNameFor(model => model.PostalCode)</th>
+        <th>@Html.DisplayNameFor(model => model.MobilePhone)</th>
+        <th>@Html.DisplayNameFor(model => model.Email)</th>
+        <th>@Html.DisplayNameFor(model => model.Active)</th>
+        <th>@Html.DisplayNameFor(model => model.DateOfBirth)</th>
+        <th>@Html.DisplayNameFor(model => model.IdentificationNumber)</th>
+        <th>@Html.DisplayNameFor(model => model.IdentificationType)</th>
+        <th>@Html.DisplayNameFor(model => model.ExpirationDateIdentificationNumber)</th>
+        <th>@Html.DisplayNameFor(model => model.TaxIdentificationNumber)</th>
+        <th>@Html.DisplayNameFor(model => model.EnrollDate)</th>
+        <th>@Html.DisplayNameFor(model => model.ProfilePhotoId)</th>
+        <th>@Html.DisplayNameFor(model => model.IdGuid)</th>
+        <th>@Html.DisplayNameFor(model => model.WasDeleted)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedAt)</th>
+        <th>@Html.DisplayNameFor(model => model.UpdatedAt)</th>
         <th></th>
     </tr>
     </thead>
+
     <tbody>
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostalCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MobilePhone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfBirth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdentificationNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdentificationType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExpirationDateIdentificationNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TaxIdentificationNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnrollDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfilePhotoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdGuid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WasDeleted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
+            <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
+            <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+            <td>@Html.DisplayFor(modelItem => item.Address)</td>
+            <td>@Html.DisplayFor(modelItem => item.PostalCode)</td>
+            <td>@Html.DisplayFor(modelItem => item.MobilePhone)</td>
+            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            <td>@Html.DisplayFor(modelItem => item.Active)</td>
+            <td>@Html.DisplayFor(modelItem => item.DateOfBirth)</td>
+            <td>@Html.DisplayFor(modelItem => item.IdentificationNumber)</td>
+            <td>@Html.DisplayFor(modelItem => item.IdentificationType)</td>
+            <td>@Html.DisplayFor(modelItem => item.ExpirationDateIdentificationNumber)</td>
+            <td>@Html.DisplayFor(modelItem => item.TaxIdentificationNumber)</td>
+            <td>@Html.DisplayFor(modelItem => item.EnrollDate)</td>
+            <td>@Html.DisplayFor(modelItem => item.ProfilePhotoId)</td>
+            <td>@Html.DisplayFor(modelItem => item.IdGuid)</td>
+            <td>@Html.DisplayFor(modelItem => item.WasDeleted)</td>
+            <td>@Html.DisplayFor(modelItem => item.CreatedAt)</td>
+            <td>@Html.DisplayFor(modelItem => item.UpdatedAt)</td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
