--- a/SchoolProject.Web/Views/Users/Index.cshtml
+++ b/SchoolProject.Web/Views/Users/Index.cshtml
@@ -1,4 +1,5 @@
 @* @model IEnumerable<SchoolProject.Web.Data.Entities.Users.User> *@
+
 @model IEnumerable<SchoolProject.Web.Models.Users.UserWithRolesViewModel>
 
 @{
@@ -10,7 +11,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
 <table class="table">
+
     <thead>
     <tr>
         <th>@Html.DisplayNameFor(model => model.User.FirstName)</th>
@@ -19,13 +22,13 @@
         <th>@Html.DisplayNameFor(model => model.User.WasDeleted)</th>
         <th>@Html.DisplayNameFor(model => model.User.ProfilePhotoId)</th>
         <th>@Html.DisplayNameFor(model => model.User.UserName)</th>
-        <th>@Html.DisplayNameFor(model => model.User.NormalizedUserName)</th>
+        @* <th>@Html.DisplayNameFor(model => model.User.NormalizedUserName)</th> *@
         <th>@Html.DisplayNameFor(model => model.User.Email) </th>
-        <th>@Html.DisplayNameFor(model => model.User.NormalizedEmail)</th>
+        @* <th>@Html.DisplayNameFor(model => model.User.NormalizedEmail)</th> *@
         <th>@Html.DisplayNameFor(model => model.User.EmailConfirmed)</th>
-        <th>@Html.DisplayNameFor(model => model.User.PasswordHash)</th>
-        <th>@Html.DisplayNameFor(model => model.User.SecurityStamp)</th>
-        <th>@Html.DisplayNameFor(model => model.User.ConcurrencyStamp)</th>
+        @* <th>@Html.DisplayNameFor(model => model.User.PasswordHash)</th> *@
+        @* <th>@Html.DisplayNameFor(model => model.User.SecurityStamp)</th> *@
+        @* <th>@Html.DisplayNameFor(model => model.User.ConcurrencyStamp)</th> *@
         <th>@Html.DisplayNameFor(model => model.User.PhoneNumber)</th>
         <th>@Html.DisplayNameFor(model => model.User.PhoneNumberConfirmed)</th>
         <th>@Html.DisplayNameFor(model => model.User.TwoFactorEnabled)</th>
@@ -37,6 +40,7 @@
         <th></th>
     </tr>
     </thead>
+
     <tbody>
     @foreach (var item in Model)
     {
@@ -47,13 +51,13 @@
             <td>@Html.DisplayFor(modelItem => item.User.WasDeleted)</td>
             <td>@Html.DisplayFor(modelItem => item.User.ProfilePhotoId)</td>
             <td>@Html.DisplayFor(modelItem => item.User.UserName)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.NormalizedUserName)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.User.NormalizedUserName)</td> *@
             <td>@Html.DisplayFor(modelItem => item.User.Email)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.NormalizedEmail)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.User.NormalizedEmail)</td> *@
             <td>@Html.DisplayFor(modelItem => item.User.EmailConfirmed)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.PasswordHash)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.SecurityStamp)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.ConcurrencyStamp)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.User.PasswordHash)</td> *@
+            @* <td>@Html.DisplayFor(modelItem => item.User.SecurityStamp)</td> *@
+            @* <td>@Html.DisplayFor(modelItem => item.User.ConcurrencyStamp)</td> *@
             <td>@Html.DisplayFor(modelItem => item.User.PhoneNumber)</td>
             <td>@Html.DisplayFor(modelItem => item.User.PhoneNumberConfirmed)</td>
             <td>@Html.DisplayFor(modelItem => item.User.TwoFactorEnabled)</td>
@@ -70,4 +74,5 @@
         </tr>
     }
     </tbody>
+
 </table>
