--- a/SchoolProject.Web/Views/Roles/Index.cshtml
+++ b/SchoolProject.Web/Views/Roles/Index.cshtml
@@ -6,7 +6,9 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<p><a asp-action="Create">Create New</a></p>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 
 <table class="table">
 
@@ -20,7 +22,7 @@
         <th></th>
     </tr>
     </thead>
-    
+
     <tbody>
     @foreach (var item in Model)
     {
@@ -38,5 +40,5 @@
         </tr>
     }
     </tbody>
-    
+
 </table>
