--- a/SchoolProject.Web/Views/Roles/Index.cshtml
+++ b/SchoolProject.Web/Views/Roles/Index.cshtml
@@ -10,7 +10,8 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<table class="table">
+<table class="table table-hover" sortable="True" id="sortableTable">
+
 
     <thead>
     <tr>
