--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarHomePanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarHomePanel.cshtml
@@ -48,7 +48,7 @@
         </li>
         <li>
             <a class="dropdown-item @(currentAction == "Contact" && currentController == "Home" ? "active" : "")"
-               asp-area="" asp-controller="Home" asp-action="Contact">
+               asp-area="" asp-controller="Home" asp-action="Contacts">
                 <i class="fas fa-envelope"></i> Contacts
             </a>
         </li>
