--- a/SchoolProject.Web/Views/Cities/Index.cshtml
+++ b/SchoolProject.Web/Views/Cities/Index.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-hover" sortable="True" id="sortableTable">
+
     <thead>
     <tr>
         <th>
