--- a/SchoolProject.Web/Views/Courses/Index.cshtml
+++ b/SchoolProject.Web/Views/Courses/Index.cshtml
@@ -1,84 +1,50 @@
 @model IEnumerable<SchoolProject.Web.Data.Entities.Courses.Course>
 
 @{
-    ViewData["Title"] = "Index";
+    // ViewData["Title"] = "Index";
+    // ViewData["Title"] = "Owners List";
+    // ViewData["Title"] = @ViewContext.RouteData.Values["controller"] + " - " + @ViewContext.RouteData.Values["action"];
+    ViewData["Title"] = ViewContext.RouteData.Values["controller"] + " List";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+
+<table class="table table-hover" sortable="True" id="sortableTable">
+
     <thead>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Hours)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreditPoints)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProfilePhotoId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdGuid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WasDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.Code)</th>
+        <th>@Html.DisplayNameFor(model => model.Name)</th>
+        <th>@Html.DisplayNameFor(model => model.Description)</th>
+        <th>@Html.DisplayNameFor(model => model.Hours)</th>
+        <th>@Html.DisplayNameFor(model => model.CreditPoints)</th>
+        <th>@Html.DisplayNameFor(model => model.ProfilePhotoId)</th>
+        <th>@Html.DisplayNameFor(model => model.IdGuid)</th>
+        <th>@Html.DisplayNameFor(model => model.WasDeleted)</th>
+        <th>@Html.DisplayNameFor(model => model.CreatedAt) </th>
+        <th>@Html.DisplayNameFor(model => model.UpdatedAt)</th>
         <th></th>
     </tr>
     </thead>
+
     <tbody>
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Hours)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreditPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfilePhotoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdGuid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WasDeleted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
+            <td>@Html.DisplayFor(modelItem => item.Code)</td>
+            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Description)</td>
+            <td>@Html.DisplayFor(modelItem => item.Hours)</td>
+            <td>@Html.DisplayFor(modelItem => item.CreditPoints)</td>
+            <td>@Html.DisplayFor(modelItem => item.ProfilePhotoId)</td>
+            <td>@Html.DisplayFor(modelItem => item.IdGuid)</td>
+            <td>@Html.DisplayFor(modelItem => item.WasDeleted)</td>
+            <td>@Html.DisplayFor(modelItem => item.CreatedAt)</td>
+            <td>@Html.DisplayFor(modelItem => item.UpdatedAt)</td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
