--- a/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
@@ -1,33 +1,465 @@
-﻿<footer class="footer">
+﻿@* --------------------------------------------------- *@
+@* O meu footer *@
+@* --------------------------------------------------- *@
+<footer class="container py-5 bottom-0 bg-body-tertiary">
+    <div class="row">
+        <div class="col-12 col-md">
 
-    <partial name="_LayoutDarkModeButton"/>
+            <svg class="d-block mb-2" fill="none" height="24" role="img" stroke="currentColor"
+                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
+                 xmlns="http://www.w3.org/2000/svg">
+                <title>Product</title>
+                <circle cx="12" cy="12" r="10"/>
+                <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/>
+            </svg>
 
-    @* <div class="container-fluid" style="width:100%"> *@
-    @*     <span class="text-body-secondary">Place sticky footer content here.</span> *@
-    @*     <span class="text-body-secondary"> *@
-    @*         @DateTime.Now | @DateTime.Today.Year - @ViewData["AssemblyName"] &copy; - *@
-    @*         Version: @ViewData["AssemblyVersion"] | Web - *@
-    @*         <!-- Será atualizado com a largura do HTML --> *@
-    @*         <i id="output3"></i> *@
-    @*     </span> *@
-    @*     <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
-    @* </div> *@
+            @* <small class="d-block mb-3 text-body-secondary">&copy; 2017 – @DateTime.Today.Year</small> *@
 
-    <nav class="navbar sticky-bottom bg-body-tertiary position-absolute bottom-0 start-0" style="width:100%">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sticky bottom</a>
-            <span class="text-body-secondary">
-                @DateTime.Now | @DateTime.Today.Year - @ViewData["AssemblyName"] &copy; -
-                Version: @ViewData["AssemblyVersion"] | Web -
+            <small class="d-block mb-3 text-body-secondary">
+                @DateTime.Now
+            </small>
+
+            <small class="d-block mb-3 text-body-secondary">
+                @ViewData["AssemblyName"] &copy; - Version: @ViewData["AssemblyVersion"]
+            </small>
+
+            <small class="d-block mb-3 text-body-secondary">
                 <!-- Será atualizado com a largura do HTML -->
-                <i id="output3-navbar"></i>
-            </span>
-            <span class="text-body-secondary">
-                <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </span>
+                <span id="htmlWidth-navbar"></span>
+            </small>
+
+            <small class="d-block mb-3 text-body-secondary">
+                <!-- Será atualizado com a altura do HTML -->
+                <span id="htmlHeight-navbar"></span>
+            </small>
+
+            <small class="d-block mb-3 text-body-secondary">
+                <!-- Será atualizado com a altura do HTML -->
+                <span id="htmlWidthHeight-navbar"></span>
+            </small>
+
         </div>
-    </nav>
+
+        <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Cool stuff</a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Random feature</a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Team feature</a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Stuff for developers</a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Another one</a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none" href="#">Last time</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="About">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Contacts">
+                        Contacts
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Team">
+                        Team
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Terms">
+                        Terms
+                    </a>
+                </li>
+                <li></li><li></li>
+            </ul>
+        </div>
+
+        <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Legal">
+                        Legal
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Privacy">
+                        Privacy
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Cookies">
+                        Cookies
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="CookiesPrivacy">
+                        Cookies Privacy
+                    </a>
+                </li>
+                <li></li><li></li>
+            </ul>
+        </div>
+
+        <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Team">
+                        Team
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Locations">
+                        Locations
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="Threads">
+                        Threads
+                    </a>
+                </li>
+                <li>
+                    <a class="link-secondary text-decoration-none"
+                       asp-area="" asp-controller="Home" asp-action="TimeTracker">
+                        Time Trackers
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Back to top</a>
+                </li>
+                <li></li>
+            </ul>
+        </div>
+
+    </div>
 
 </footer>
+
+
+<div class="b-example-divider"></div>
+
+
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-4 mb-0 text-body-secondary">&copy; 2023 Company, Inc</p>
+
+        <a class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+           href="/">
+            <svg class="bi me-2" height="32" width="40">
+                <use xlink:href="#bootstrap"/>
+            </svg>
+        </a>
+
+        <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">FAQs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">About</a>
+            </li>
+        </ul>
+    </footer>
+</div>
+
+
+<div class="b-example-divider"></div>
+
+
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" href="/">
+                <svg class="bi" height="24" width="30">
+                    <use xlink:href="#bootstrap"/>
+                </svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+        </div>
+
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" height="24" width="24">
+                        <use xlink:href="#twitter"/>
+                    </svg>
+                </a>
+            </li>
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" height="24" width="24">
+                        <use xlink:href="#instagram"/>
+                    </svg>
+                </a>
+            </li>
+            <li class="ms-3">
+                <a class="text-body-secondary" href="#">
+                    <svg class="bi" height="24" width="24">
+                        <use xlink:href="#facebook"/>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </footer>
+</div>
+
+
+<div class="b-example-divider"></div>
+
+
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">FAQs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link px-2 text-body-secondary" href="#">About</a>
+            </li>
+        </ul>
+        <p class="text-center text-body-secondary">&copy; 2023 Company, Inc</p>
+    </footer>
+</div>
+
+<div class="b-example-divider"></div>
+
+<div class="container">
+    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+        <div class="col mb-3">
+            <a class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none" href="/">
+                <svg class="bi me-2" height="32" width="40">
+                    <use xlink:href="#bootstrap"/>
+                </svg>
+            </a>
+            <p class="text-body-secondary">&copy; 2023</p>
+        </div>
+
+        <div class="col mb-3">
+
+        </div>
+
+        <div class="col mb-3">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col mb-3">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col mb-3">
+            <h5>Section</h5>
+            <ul class="nav flex-column">
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</div>
+
+
+<div class="b-example-divider"></div>
+
+
+<div class="container">
+    <footer class="py-5">
+        <div class="row">
+            <div class="col-6 col-md-2 mb-3">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-6 col-md-2 mb-3">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-6 col-md-2 mb-3">
+                <h5>Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Home</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Features</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">FAQs</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-body-secondary" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-5 offset-md-1 mb-3">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Monthly digest of what's new and exciting from us.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label class="visually-hidden" for="newsletter1">Email address</label>
+                        <input class="form-control" id="newsletter1" placeholder="Email address" type="text">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <p>&copy; 2023 Company, Inc. All rights reserved.</p>
+            <ul class="list-unstyled d-flex">
+                <li class="ms-3">
+                    <a class="link-body-emphasis" href="#">
+                        <svg class="bi" height="24" width="24">
+                            <use xlink:href="#twitter"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="ms-3">
+                    <a class="link-body-emphasis" href="#">
+                        <svg class="bi" height="24" width="24">
+                            <use xlink:href="#instagram"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="ms-3">
+                    <a class="link-body-emphasis" href="#">
+                        <svg class="bi" height="24" width="24">
+                            <use xlink:href="#facebook"/>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</div>
+
 
 <script src="~/js/siteFooter.js"></script>
