--- a/SchoolProject.Web/Views/Users/Index.cshtml
+++ b/SchoolProject.Web/Views/Users/Index.cshtml
@@ -6,13 +6,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 
-<table class="table">
+<table class="table table-hover" sortable="True" id="sortableTable">
+
 
     <thead>
     <tr>
