--- a/SchoolProject.Web/wwwroot/css/site.css
+++ b/SchoolProject.Web/wwwroot/css/site.css
@@ -1,17 +1,10 @@
 /* Set the base font size to 10px */
+
 html {
-    font-size: 10px;
+    font-size: 14px;
     position: relative;
     min-height: 100%;
 }
-
-/* Estilos padrão para o contêiner (tamanho automático) */
-/*.container {*/
-/*    width: auto;*/
-/*    max-width: 100%;*/
-/*    padding: 1rem; !* Adicione padding relativo para espaçamento interno *!*/
-/*    margin: 0 auto; !* Centralizar o contêiner na tela *!*/
-/*}*/
 
 
 /* ---------------------------------------------- */
@@ -21,86 +14,86 @@ html {
 /* Tamanhos de tela e tamanhos de fonte responsivos */
 
 /* Tamanho de Tela: xs (Menor que 576px) */
-@media (max-width: 575px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (max-width: 575px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: none; /* Tamanho automático */
-        padding: 0.2rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: none; !* Tamanho automático *!*/
+/*        padding: 0.2rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 /* Tamanho de Tela: sm (576px e acima) */
-@media (min-width: 576px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 576px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 54rem; /* 540px em relação ao tamanho base de 10px */
-        padding: 0.2rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 54rem; !* 540px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.2rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 /* Tamanho de Tela: md (768px e acima) */
-@media (min-width: 768px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 768px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 72rem; /* 720px em relação ao tamanho base de 10px */
-        padding: 0.4rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 72rem; !* 720px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.4rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 /* Tamanho de Tela: lg (992px e acima) */
-@media (min-width: 992px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 992px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 96rem; /* 960px em relação ao tamanho base de 10px */
-        padding: 0.4rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 96rem; !* 960px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.4rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 /* Tamanho de Tela: xl (1200px e acima) */
-@media (min-width: 1200px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 1200px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 114rem; /* 1140px em relação ao tamanho base de 10px */
-        padding: 0.6rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 114rem; !* 1140px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.6rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 /* Tamanho de Tela: xxl (1400px e acima) */
-@media (min-width: 1400px) {
-    html {
-        font-size: 1.0rem; /* 10px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 1400px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 10px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 132rem; /* 1320px em relação ao tamanho base de 10px */
-        padding: 0.6rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 132rem; !* 1320px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.6rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
 
 
 /* Tamanho de Tela: xxxl (1400px e acima) */
-@media (min-width: 2000px) {
-    html {
-        font-size: 1.0rem; /* 12px em relação ao tamanho base de 10px */
-    }
+/*@media (min-width: 2000px) {*/
+/*    html {*/
+/*        font-size: 1.0rem; !* 12px em relação ao tamanho base de 10px *!*/
+/*    }*/
 
-    .container {
-        max-width: 190rem; /* 1320px em relação ao tamanho base de 10px */
-        padding: 0.8rem; /* Ajuste o padding relativo conforme necessário */
-    }
-}
+/*    .container {*/
+/*        max-width: 190rem; !* 1320px em relação ao tamanho base de 10px *!*/
+/*        padding: 0.8rem; !* Ajuste o padding relativo conforme necessário *!*/
+/*    }*/
+/*}*/
