--- a/SchoolProject.Web/Views/Shared/_LayoutHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutHeader.cshtml
@@ -1,7 +1,19 @@
 ﻿<header>
 
-    <partial name="_LayoutDarkModeButton"/>
+    <div class="b-example-divider">
+        <partial name="_LayoutNavBar"/>
+    </div>
 
-    <partial name="_LayoutNavBar"/>
+    <div class="b-example-divider">
+        <partial name="_LayoutOffCanvas"/>
+    </div>
 
+    <div class="b-example-divider">
+        @* <partial name="_LayoutNavBar3"/> *@
+    </div>
+
+    <div class="b-example-divider">
+        @* <partial name="_LayoutNavBar4"/> *@
+    </div>
+    
 </header>
