--- a/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
@@ -1,173 +1,26 @@
-﻿@{
-    var currentController = ViewContext.RouteData.Values["controller"] as string;
-    var currentAction = ViewContext.RouteData.Values["action"] as string;
-}
+﻿@* --------------------------------------------------- *@
+@* Barras de navegação do número 0 até ao 5 *@
+@* --------------------------------------------------- *@
+
+@* --------------------------------------------------- *@
+@* Barras de navegação para testes *@
+@* --------------------------------------------------- *@
+
+<div class="b-example-divider"></div>
+@* <partial name="LayoutNavBar/_LayoutNavBar0"/> *@
 
 
-<nav class="navbar navbar-expand-md sticky-top border-bottom">
-
-    <div class="container">
-        <a class="navbar-brand d-md-none" href="#">
-            <svg class="bi" height="24" width="24">
-                <use xlink:href="#aperture"/>
-            </svg>
-            Aperture
-        </a>
-
-        <button aria-controls="#offcanvas" aria-label="Toggle navigation" class="navbar-toggler"
-                data-bs-target="#offcanvas"
-                data-bs-toggle="offcanvas" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div aria-labelledby="#offcanvasLabel" class="offcanvas offcanvas-end" id="#offcanvas" tabindex="-1">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="#offcanvasLabel">Aperture</h5>
-                <button aria-label="Close" class="btn-close" data-bs-dismiss="offcanvas" type="button"></button>
-            </div>
-
-            <div class="offcanvas-body">
-                <ul class="navbar-nav flex-grow-1 justify-content-between">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <svg class="bi" height="24" width="24">
-                                <use xlink:href="#aperture"/>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tour</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Enterprise</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Support</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <svg class="bi" height="24" width="24">
-                                <use xlink:href="#cart"/>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</nav>
+<div class="b-example-divider"></div>
+<partial name="LayoutNavBar/_LayoutNavBarMedium"/>
 
 
-    <nav aria-label="Offcanvas navbar large" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Responsive offcanvas navbar</a>
-            <button aria-controls="offcanvasNavbar2" aria-label="Toggle navigation" class="navbar-toggler"
-                    data-bs-target="#offcanvasNavbar2"
-                    data-bs-toggle="offcanvas" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div aria-labelledby="offcanvasNavbar2Label"
-                 class="offcanvas offcanvas-end text-bg-dark" id="offcanvasNavbar2" tabindex="-1">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
-                    <button aria-label="Close" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            type="button"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a aria-current="page" class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                               role="button">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex mt-3 mt-lg-0" role="search">
-                        <input aria-label="Search" class="form-control me-2" placeholder="Search" type="search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </nav>
+<div class="b-example-divider"></div>
+<partial name="LayoutNavBar/_LayoutNavBarOffCanvasLarge"/>
 
 
+<div class="b-example-divider"></div>
+<partial name="LayoutNavBar/_LayoutNavBarMain"/>
 
-<nav class="navbar navbar-expand-xxl bg-body-tertiary nav-tabs">
-    @* <nav class="navbar navbar-expand bg-body-tertiary nav-tabs"> *@
-    @* <nav class="navbar navbar-expand-lg bg-body-tertiary nav-tabs"> *@
 
-    <div class="container-fluid">
-
-        @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@ViewData["Title"] - </a> *@
-        @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> *@
-        @*     @ViewData["AssemblyName"] *@
-        @* </a> *@
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/images/icons/school-256x256.ico" alt="@ViewData["AssemblyName"]" width="30" height="24">
-        </a>
-
-        <div class="navbar-collapse collapse justify-content-between" id="navbarNavAltMarkup">
-
-            <div class="navbar-nav flex-grow-1">
-
-                @* <partial name="_LayoutNavBarHomePanel"/> *@
-                
-                <partial name="_LayoutNavBarCountriesPanel"/>
-
-                <a class="nav-link @(currentController == "Courses" ? "active" : "")"
-                   asp-area="" asp-controller="Courses" asp-action="Index">
-                    <i class="fas fa-person-shelter"></i>Courses
-                </a>
-
-                <a class="nav-link @(currentController == "Enrollments" ? "active" : "")"
-                   asp-area="" asp-controller="Enrollments" asp-action="Index">
-                    <i class="fas fa-person-through-window"></i>Enrollments
-                </a>
-
-                <a class="nav-link @(currentController == "Genders" ? "active" : "")"
-                   asp-area="" asp-controller="Genders" asp-action="Index">
-                    @* <i class="fas fa-person-shelter"></i> *@
-                    <span class="material-symbols-outlined">transgender</span>Genders
-                </a>
-
-                <partial name="_LayoutNavBarSchoolClassesPanel"/>
-                <partial name="_LayoutNavBarStudentsPanel"/>
-                <partial name="_LayoutNavBarTeachersPanel"/>
-
-            </div>
-
-        </div>
-
-        @* <partial name="_LayoutNavBarLanguagePanel"/> *@
-        @* <partial name="_LayoutNavBarThemePanel"/> *@
-        <partial name="_LayoutNavBarAccountPanel"/>
-        <partial name="_LayoutNavBarAdminPanel"/>
-        <partial name="_LayoutNavBarLoginPanel"/>
-
-    </div>
-
-</nav>
+<div class="b-example-divider"></div>
+<partial name="LayoutNavBar/_LayoutNavBar4"/>
