--- a/SchoolProject.Web/wwwroot/css/site.css
+++ b/SchoolProject.Web/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/* Set the base font size to 10px */
+/* Set the base font size to 14px */
 
 html {
     font-size: 14px;
@@ -6,6 +6,25 @@ html {
     min-height: 100%;
 }
 
+
+/* Color modes button from bootstrap 5.3.1 */
+/* <script src="/docs/5.3/assets/js/color-modes.js"></script> */
+.btn-bd-primary {
+    --bd-violet-bg: #712cf9;
+    --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+
+    --bs-btn-font-weight: 600;
+    --bs-btn-color: var(--bs-white);
+    --bs-btn-bg: var(--bd-violet-bg);
+    --bs-btn-border-color: var(--bd-violet-bg);
+    --bs-btn-hover-color: var(--bs-white);
+    --bs-btn-hover-bg: #6528e0;
+    --bs-btn-hover-border-color: #6528e0;
+    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+    --bs-btn-active-color: var(--bs-btn-hover-color);
+    --bs-btn-active-bg: #5a23c8;
+    --bs-btn-active-border-color: #5a23c8;
+}
 
 /* ---------------------------------------------- */
 /* Media queries para diferentes tamanhos de tela */
